--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "draft-js": "^0.9.1",
+    "draft-js-export-html": "^0.5.2",
+    "draft-js-import-html": "^0.3.2",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
